Update/Create 2017-05-07-Light-Bot.md

--- a/_posts/2017-05-07-Light-Bot.md
+++ b/_posts/2017-05-07-Light-Bot.md
@@ -10,9 +10,9 @@ published: true
 
 <table>
   <tr>
-    <th>Title</th>
+    <td>Title</td>
     <td>Light Bot</td>
-    <th>Date</th>
+    <td>Date</td>
     <td>26/04/17</td>
   </tr>
 </table>
@@ -37,7 +37,7 @@ published: true
 
 <table>
   <tr>
-    <th>Lesson Review</th>
+    <td>Lesson Review</td>
   </tr>
   <tr>
     <td>How did I learn? What strategies were effective? </td>
@@ -55,7 +55,7 @@ published: true
     <td>What will I change for next time? How will I improve my learning?</td>
   </tr>
   <tr>
-    <td>Next time I will NOT state that i'm type one diabetic! </td>
+    <td>Next time I will NOT state that i'm type one diabetic!</td>
   </tr>
 </table>
 
